# contact-human-dynamics

./: .gitignore  LICENSE.txt  README.md  requirements.txt
data/: download_full.sh  download_sample.sh  download_viz.sh
pretrained_weights/: download.sh
scripts/: create_optim_data_structure.py  run_detect_contacts.py  run_openpose.py  run_phys_mocap.py  run_totalcap.py
src/contact_learning/: test.py  train.py  utils.py
src/optimize/: OneEuroFilter.py  SkeletonDefinitions.py  kinematic_optimizer.py  optimize_trajectory.py
src/skeleton_fitting/: combined_body_25.bvh  combined_to_mixamo.py  skeletonzombie.bvh  ty.bvh  ybot.bvh
src/utils/: openpose_utils.py  (+3 more)
towr_phys_optim/: CMakeLists.txt  phys_optim.cpp
towr_phys_optim/include/: nlp_formulation.h  parameters.h
towr_phys_optim/include/constraints/: ee_dist_constraint.h  height_constraint.h  humanoid_dynamic_constraint.h  leg_length_constraint.h  total_duration_constraint.h
towr_phys_optim/include/costs/: data_cost.h  duration_cost.h  vel_smooth_cost.h
towr_phys_optim/include/models/: humanoid.h  humanoid_rigid_body_dynamics.h
towr_phys_optim/include/terrain/: ground_plane.h
towr_phys_optim/include/variables/: nodes_variables_dynamic_phase_based.h
towr_phys_optim/src/: nlp_formulation.cpp  parameters.cpp
towr_phys_optim/src/constraints/: ee_dist_constraint.cpp  height_constraint.cpp  humanoid_dynamic_constraint.cpp  leg_length_constraint.cpp  total_duration_constraint.cpp
towr_phys_optim/src/costs/: data_cost.cpp  duration_cost.cpp  vel_smooth_cost.cpp
towr_phys_optim/src/models/: humanoid_rigid_body_dynamics.cpp
towr_phys_optim/src/terrain/: ground_plane.cpp
towr_phys_optim/src/variables/: nodes_variables_dynamic_phase_based.cpp
(+11 files in other folders)
